# ai_voip

./: .gitignore  README.md
ai_voip_backend/: .env.example  .gitignore  README.md  pyproject.toml
ai_voip_backend/docs/: API.md
ai_voip_backend/sql/pgsql/: 010_base_tables.sql  020_trunk_tables.sql  030_script_tables.sql  040_contact_tables.sql  050_task_tables.sql  060_media_tables.sql  070_qc_tables.sql  080_stats_tables.sql  085_access_control_tables.sql  086_trunk_type_fields.sql  087_task_run_tables.sql  090_seed_data.sql
ai_voip_backend/src/ai_voip_backend/: __init__.py  app.py  auth.py  bootstrap.py  cli.py  config.py  db.py  errors.py  logging_setup.py  middleware.py  permissions.py  schema.py  security.py  server.py
ai_voip_backend/src/ai_voip_backend/api/: __init__.py  dependencies.py  router.py
ai_voip_backend/src/ai_voip_backend/api/routes/: auth.py  contacts.py  health.py  media.py  providers.py  qc.py  runtime.py  scripts.py  storage_profiles.py  system.py  tasks.py  trunks.py  users.py
ai_voip_backend/src/ai_voip_backend/api/schemas/: auth.py  common.py  (+11 more)
ai_voip_backend/src/ai_voip_backend/services/: auth_service.py  call_playback_service.py  captcha_service.py  common.py  contact_service.py  media_service.py  provider_service.py  qc_service.py  runtime_service.py  script_service.py  sip_usip_service.py  storage_service.py  system_service.py  task_runtime_scheduler.py  task_service.py  trunk_service.py  tts_generation_service.py  user_service.py
ai_voip_backend/src/ai_voip_backend/storage/: __init__.py  base.py  local.py  s3_placeholder.py
(+31 files in other folders)
